--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
   </section>
 
   <section id="research">
-    <h2>Research Articles</h2>
-    <p>Heavy baryons, quantum fields, and the unobservable truths.</p>
-    <ul>
-      <li><a href="#">Radiative Decays of Ω<sub>bbb</sub></a></li>
-      <li><a href="#">Semileptonic Decays in Heavy Baryons</a></li>
-    </ul>
-  </section>
+  <h2>Research Articles</h2>
+  <p>Peer-reviewed work exploring the inner structure and transition properties of heavy baryons.</p>
+  <ul>
+    <li><a href="research/shb-epjp.pdf" target="_blank">Electromagnetic & Weak Decays of Singly Heavy Baryons (EPJ Plus, 2025)</a></li>
+    <li><a href="research/dhb-ijtp.pdf" target="_blank">Transition Properties of Doubly Heavy Baryons (IJTP, 2025)</a></li>
+  </ul>
+</section>
+
 
   <section id="about">
     <h2>About</h2>
