--- a/index.html
+++ b/index.html
@@ -72,14 +72,23 @@
     </ul>
   </section>
 
-  <section id="research">
+ <section id="research">
   <h2>Research Articles</h2>
-  <p>Peer-reviewed work exploring the inner structure and transition properties of heavy baryons.</p>
+  <p>Peer-reviewed work exploring the structure, transitions, and decay properties of heavy baryons.</p>
   <ul>
-    <li><a href="research/shb-epjp.pdf" target="_blank">Electromagnetic & Weak Decays of Singly Heavy Baryons (EPJ Plus, 2025)</a></li>
-    <li><a href="research/dhb-ijtp.pdf" target="_blank">Transition Properties of Doubly Heavy Baryons (IJTP, 2025)</a></li>
+    <li>
+      <strong>Transition Properties of Doubly Heavy Baryons</strong><br />
+      <em>International Journal of Theoretical Physics (IJTP, 2025)</em><br />
+      <a href="research/dhb-ijtp.pdf" target="_blank">Read Online</a>
+    </li>
+    <li>
+      <strong>Electromagnetic & Weak Decays of Singly Heavy Baryons</strong><br />
+      <em>European Physical Journal Plus (EPJP, 2025)</em><br />
+      <a href="research/shb-epjp.pdf" target="_blank">Read Online</a>
+    </li>
   </ul>
 </section>
+
 
 
   <section id="about">
