--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     header img {
       width: 160px;
       height: 160px;
-      border-radius: 0%;
+      border-radius: 12px;
       object-fit: cover;
       margin-bottom: 1rem;
     }
