--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     }
     .hero {
       height: 100vh;
-      background: url('images/banner-kinjal.jpg') center/cover no-repeat;
+     background: url('images/banner-kinjal.jpg') center top/contain no-repeat;
+
       display: flex;
       align-items: center;
       justify-content: center;
