--- a/index.html
+++ b/index.html
@@ -150,28 +150,27 @@
   <h1>The Mood Jar</h1>
   <p>Pick a color. Let your heart read what it needs.</p>
 
-  <div class="color-buttons">
-    <button style="background-color: #FFD700;" onclick="showProse('hope')">💛 Hope</button>
-    <button style="background-color: #87CEEB;" onclick="showProse('sad')">💙 Sadness</button>
-    <button style="background-color: #90EE90;" onclick="showProse('heal')">💚 Healing</button>
-    <button style="background-color: #000000;" onclick="showProse('strong')">🖤 Strength</button>
-    <button style="background-color: #FFA07A;" onclick="showProse('push')">🧡 Motivation</button>
-    <button style="background-color: #D8BFD8;" onclick="showProse('reflect')">💜 Reflection</button>
-    <button style="background-color: #f5f5f5; color:#444;" onclick="showProse('calm')">🤍 Calm</button>
-  </div>
+ <h2>💔 Loneliness Jar</h2>
+<p>Pick a slip that understands how you feel.</p>
 
-  <div id="prose-display"></div>
+<button onclick="showLonelySlip()">Pick a Random Slip</button>
 
-  <script>
-    const moodProses = {
-      hope: "You don’t have to know the way. Just believe there is one.",
-      sad: "Even the ocean aches in silence. You’re allowed to feel.",
-      heal: "Some days, peace feels like a soft leaf — small, but enough.",
-      strong: "You survived again. Quietly, fiercely. That’s strength.",
-      push: "Burn gently, but burn anyway.",
-      reflect: "You were never hard to love — they just couldn’t see softly enough.",
-      calm: "Stillness is not emptiness. It’s arrival."
-    };
+<div id="lonely-slip" style="margin-top:20px; font-style: italic; font-size: 1.2em;"></div>
+
+<script>
+  const lonelinessJar = [
+    "The worst part of loneliness is when you're not actually alone.",
+    "You are allowed to crave connection and still feel disconnected.",
+    "Maybe all you needed was someone to say, ‘I see you. Still.’",
+    "Your silence does not make you invisible. I promise.",
+    "You are not hard to love. You are hard to understand—softness always is."
+  ];
+
+  function showLonelySlip() {
+    const slip = lonelinessJar[Math.floor(Math.random() * lonelinessJar.length)];
+    document.getElementById("lonely-slip").innerText = slip;
+  }
+</script>
 
     function showProse(mood) {
       document.getElementById("prose-display").innerText = moodProses[mood];
