--- a/index.html
+++ b/index.html
@@ -176,6 +176,29 @@
       document.getElementById("prose-display").innerText = moodProses[mood];
     }
   </script>
+<div style="margin-top: 50px; text-align: center;">
+  <a href="https://amzn.in/d/38fGir8" target="_blank" style="
+    background-color: #1f1f1f;
+    color: #fff;
+    padding: 14px 28px;
+    font-size: 1.1em;
+    font-family: 'Georgia', serif;
+    text-decoration: none;
+    border-radius: 30px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    letter-spacing: 0.5px;
+    transition: all 0.3s ease;
+    display: inline-block;
+  "
+  onmouseover="this.style.backgroundColor='#333'"
+  onmouseout="this.style.backgroundColor='#1f1f1f'">
+    🛍️ Buy My Book on Amazon
+  </a>
+</div>
+
+<p style="margin-top: 15px; font-style: italic; font-size: 0.95em; color: #666;">
+  For the ones who write letters they’ll never send.
+</p>
 
 </body>
 </html>
