--- a/index.html
+++ b/index.html
@@ -48,14 +48,25 @@
     </div>
   </div>
 
-  <section id="research">
-    <h2>Research Articles</h2>
-    <p>Peer-reviewed work...</p>
-    <ul>
-      <li><strong>Transition Properties…</strong> (<em>IJTP, 2025</em>) – <a href="research/dhb-ijtp.pdf">Read Online</a></li>
-      <li><strong>Electromagnetic & Weak Decays…</strong> (<em>EPJP, 2025</em>) – <a href="research/shb-epjp.pdf">Read Online</a></li>
-    </ul>
-  </section>
+ <section id="research">
+  <h2>Research Articles</h2>
+  <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
+
+  <ul>
+    <li>
+      <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
+      <em>Published in International Journal of Theoretical Physics (IJTP, 2025)</em><br>
+      <a href="research/dhb-ijtp.pdf" target="_blank">📄 Read Full Article</a>
+    </li>
+
+    <li>
+      <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</strong><br>
+      <em>Published in European Physical Journal Plus (EPJP, 2025)</em><br>
+      <a href="research/shb-epjp.pdf" target="_blank">📄 Read Full Article</a>
+    </li>
+  </ul>
+</section>
+
 
   <section id="mood-jar" class="jar-section">
     <h2>The Mood Jar</h2>
