--- a/index.html
+++ b/index.html
@@ -5,37 +5,85 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kinjal Patel | Official Website</title>
   <style>
-    @font-face { font-family: 'Centaur'; src: local('Centaur'); }
     body {
-      margin: 0; font-family: 'Centaur', Georgia, serif;
-      background: #fdfcf9; color: #222; line-height: 1.6;
-      text-align: center; padding-bottom: 50px;
+      margin: 0;
+      font-family: 'Georgia', serif;
+      background: #fdfcf9;
+      color: #222;
+      text-align: center;
     }
     .hero {
       height: 60vh;
       background: url('images/me.jpg') center/contain no-repeat;
-      display: flex; align-items: center;
-      justify-content: center; position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
     }
-    .hero::after { content: ""; position: absolute; inset: 0; background: rgba(0, 0, 0, 0.4); }
-    .hero-text { position: relative; color: #fff; z-index: 1; }
-    .hero-text h1 { font-size: 3em; margin: 0; letter-spacing: 0.1em; }
-    .hero-text p { font-size: 1.1em; font-style: italic; }
-    section { padding: 2rem; max-width: 720px; margin: 0 auto; }
-    h2 { font-size: 2em; margin-bottom: 1rem; border-bottom: 1px solid #ccc; padding-bottom: 0.3em; }
-    .jar-section { background: #fefbf6; padding: 2rem; border-radius: 8px; }
-    button, a.shop-button {
-      background-color: #1f1f1f; color: white;
-      padding: 12px 24px; font-size: 1.1em;
-      border: none; border-radius: 30px;
-      text-decoration: none; display: inline-block;
-      transition: background-color 0.3s ease;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    .hero::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.4);
+    }
+    .hero-text {
+      position: relative;
+      color: #fff;
+      z-index: 1;
+    }
+    .hero-text h1 {
+      font-size: 3em;
+      margin: 0;
+    }
+    .hero-text p {
+      font-style: italic;
+    }
+    section {
+      padding: 2rem;
+      max-width: 720px;
+      margin: 0 auto;
+    }
+    h2 {
+      font-size: 1.8em;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 0.3em;
+    }
+    ul {
+      list-style-type: disc;
+      text-align: left;
+      padding-left: 20px;
+      margin-top: 1em;
+    }
+    li {
+      margin-bottom: 1.5em;
+      font-size: 1.05em;
+    }
+    li a {
+      display: inline-block;
+      margin-top: 6px;
+      color: #1a0dab;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    li a:hover {
+      text-decoration: underline;
+    }
+    .shop-button, button {
+      background-color: #1f1f1f;
+      color: white;
+      padding: 14px 28px;
+      border-radius: 30px;
+      font-size: 1.1em;
       font-family: Georgia, serif;
-      margin-top: 20px;
+      margin-top: 30px;
+      text-decoration: none;
+      display: inline-block;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
     }
-    button:hover, a.shop-button:hover { background-color: #333; }
-    #lonely-slip { margin-top: 20px; font-style: italic; font-size: 1.2em; }
+    .shop-button:hover, button:hover {
+      background-color: #333;
+    }
   </style>
 </head>
 
@@ -48,37 +96,32 @@
     </div>
   </div>
 
- <section id="research">
-  <h2>Research Articles</h2>
-  <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
+  <section id="research">
+    <h2>Research Articles</h2>
+    <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
+    <ul>
+      <li>
+        <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
+        <em>Published in International Journal of Theoretical Physics (IJTP, 2025)</em><br>
+        <a href="research/dhb-ijtp.pdf" target="_blank">📄 Read Full Article</a>
+      </li>
+      <li>
+        <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</strong><br>
+        <em>Published in European Physical Journal Plus (EPJP, 2025)</em><br>
+        <a href="research/shb-epjp.pdf" target="_blank">📄 Read Full Article</a>
+      </li>
+    </ul>
+  </section>
 
-  <ul>
-    <li>
-      <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
-      <em>Published in International Journal of Theoretical Physics (IJTP, 2025)</em><br>
-      <a href="research/dhb-ijtp.pdf" target="_blank">📄 Read Full Article</a>
-    </li>
-
-    <li>
-      <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</strong><br>
-      <em>Published in European Physical Journal Plus (EPJP, 2025)</em><br>
-      <a href="research/shb-epjp.pdf" target="_blank">📄 Read Full Article</a>
-    </li>
-  </ul>
-</section>
-
-
-  <section id="mood-jar" class="jar-section">
+  <section id="mood-jar">
     <h2>The Mood Jar</h2>
-    <p>Pick a feeling. Let the words find you.</p>
+    <p>Pick a color. Let your heart read what it needs.</p>
     <h3>💔 Loneliness Jar</h3>
     <button onclick="showLonelySlip()">Pick a Random Slip</button>
-    <div id="lonely-slip"></div>
+    <div id="lonely-slip" style="margin-top: 20px; font-style: italic; font-size: 1.2em;"></div>
 
-    <a class="shop-button" href="https://amzn.in/d/38fGir8" target="_blank">
-      🛍️ Buy My Book on Amazon
-    </a>
-    <p style="margin-top:10px; font-style:italic; color:#666;">
+    <a class="shop-button" href="https://amzn.in/d/38fGir8" target="_blank">🛍️ Buy My Book on Amazon</a>
+    <p style="margin-top: 15px; font-style: italic; font-size: 0.95em; color: #666;">
       For the ones who write letters they’ll never send.
     </p>
   </section>
@@ -91,6 +134,7 @@
       "Your silence does not make you invisible. I promise.",
       "You are not hard to love. You are hard to understand—softness always is."
     ];
+
     function showLonelySlip() {
       const slip = lonelinessJar[Math.floor(Math.random() * lonelinessJar.length)];
       document.getElementById("lonely-slip").innerText = slip;
