--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     li {
       margin-bottom: 1.5em;
       font-size: 1.05em;
+      white-space: normal !important;
+      overflow: visible !important;
+      text-overflow: initial !important;
     }
     li a {
       display: inline-block;
@@ -101,12 +104,12 @@
     <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
     <ul>
       <li>
-        <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
+        <strong>Transition Properties of Doubly Heavy Baryons: Radiative and Semileptonic Decays Using the Hypercentral Constituent Quark Model</strong><br>
         <em>Published in International Journal of Theoretical Physics (IJTP, 2025)</em><br>
         <a href="research/dhb-ijtp.pdf" target="_blank">📄 Read Full Article</a>
       </li>
       <li>
-        <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</strong><br>
+        <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons in the Hypercentral Model</strong><br>
         <em>Published in European Physical Journal Plus (EPJP, 2025)</em><br>
         <a href="research/shb-epjp.pdf" target="_blank">📄 Read Full Article</a>
       </li>
